--- a/NSACloudService/NSACloudService.csproj
+++ b/NSACloudService/NSACloudService.csproj
@@ -228,8 +228,10 @@
     <Content Include="Images\bill.jpg" />
     <Content Include="Images\cloudbackup.jpg" />
     <Content Include="Images\dennis.jpg" />
+    <Content Include="Images\fowler.jpg" />
     <Content Include="Images\Logo.jpg" />
-    <Content Include="Images\obama.jpg" />
+    <Content Include="Images\stevejobs.jpg" />
+    <Content Include="Images\unclebob.jpg" />
     <Content Include="Images\yolanthe.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
